auto off added (colab will be switched off after the end of training) the log when installing dependencies has been reduced

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -62,6 +62,15 @@
         "import toml\n",
         "from time import time\n",
         "from IPython.display import Markdown, display\n",
+        "import time\n",
+        "\n",
+        "\n",
+        "#auto off by ZeroProtecPlus https://github.com/ZeroProtecPlus\n",
+        "#@markdown ### 💤 Auto Off\n",
+        "\n",
+        "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
+        "auto_off   = True  # @param {type: \"boolean\"}\n",
+        "print(\"\\033[96mAuto Off encendido, el entorno se desconectara al finalizar el entrenamiento\\033[0m\")\n",
         "\n",
         "# These carry information from past executions\n",
         "if \"model_url\" in globals():\n",
@@ -102,7 +111,7 @@
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
         "training_model = \"Pony Diffusion V6 XL\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"Illustrious\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"Pony_Realism\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
-        "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las 3 opciones anteriores funcionarán con o sin diffusers.\n",
+        "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las opciones anteriores funcionarán con o sin diffusers.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
         "#@markdown Utilice wandb si desea visualizar el progreso de su entrenamiento a lo largo del tiempo.\n",
         "wandb_key = \"\" #@param {type:\"string\"}\n",
@@ -197,8 +206,8 @@
         "lr_warmup_steps = 0\n",
         "#@markdown Ajusta la pérdida a lo largo del tiempo y hace que el aprendizaje sea mucho más eficiente. El documento recomienda 5.0, yo recomiendo 8.0 para anime. Un valor más alto lo hace menos estricto. Establezca en 0 para desactivar.\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4.0, max:16.0, step:0.5}\n",
-        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros).\n",
-        "multinoise = True #@param {type:\"boolean\"}\n",
+        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros). Pero puede dañar la generación de ojos, usalo solo si es necesario.\n",
+        "multinoise = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
@@ -313,11 +322,11 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
-        "  !pip install torch==2.5.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 \\\n",
-        "    bitsandbytes==0.40.0.post4 opencv-python jax==0.4.23 jaxlib==0.4.23 \\\n",
-        "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 \\\n",
-        "    safetensors pygments huggingface-hub==0.22.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 \\\n",
-        "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2\n",
+        "  !pip install torch==2.5.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 -q \\\n",
+        "    bitsandbytes==0.40.0.post4 opencv-python jax==0.4.23 jaxlib==0.4.23 -q \\\n",
+        "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q \\\n",
+        "    safetensors pygments huggingface-hub==0.22.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q \\\n",
+        "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
         "    !pip install -q xformers\n",
@@ -641,13 +650,13 @@
         "    os.makedirs(dir, exist_ok=True)\n",
         "\n",
         "  if not validate_dataset():\n",
-        "    return\n",
+        "      return\n",
         "\n",
         "  if not dependencies_installed:\n",
         "    print(\"\\n🏭 Installing dependencies...\\n\")\n",
-        "    t0 = time()\n",
+        "    t0 = time.time()\n",
         "    install_dependencies()\n",
-        "    t1 = time()\n",
+        "    t1 = time.time()\n",
         "    dependencies_installed = True\n",
         "    print(f\"\\n✅ Installation finished in {int(t1-t0)} seconds.\")\n",
         "  else:\n",
@@ -671,11 +680,20 @@
         "\n",
         "  !accelerate launch --quiet --config_file={accelerate_config_file} --num_cpu_threads_per_process=1 train_network_xl_wrapper.py --dataset_config={dataset_config_file} --config_file={config_file}\n",
         "\n",
-        "  if not get_ipython().__dict__['user_ns']['_exit_code']:\n",
+        "  if not get_ipython().__dict__.get('user_ns', {}).get('_exit_code', False):\n",
         "    display(Markdown(\"### ✅ Done! [Go download your Lora from Google Drive](https://drive.google.com/drive/my-drive)\\n\"\n",
-        "                     \"### There will be several files, you should try the latest version (the file with the largest number next to it)\"))\n",
+        "                       \"### There will be several files, you should try the latest version (the file with the largest number next to it)\"))\n",
+        "#auto off\n",
+        "  if not auto_off:\n",
+        "      print(\"\\033[96Auto off está desactivado, el entorno no se desconectará\\033[0m\")\n",
+        "  else:\n",
+        "    print(\"\\033[96mAuto Off está activado, el entorno se desconectará en 30 segundos\\033[0m\")\n",
+        "  from google.colab import runtime\n",
+        "  time.sleep(30)\n",
+        "  runtime.unassign()\n",
         "\n",
         "main()\n",
+        "\n",
         "\n"
       ]
     },
