added gpu support

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -38,13 +40,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "cMOeKZFyX4At"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -62,6 +57,7 @@
         "from subprocess import getoutput\n",
         "from IPython.utils import capture\n",
         "from google.colab import drive\n",
+        "from IPython.display import clear_output\n",
         "\n",
         "%store -r\n",
         "\n",
@@ -139,6 +135,7 @@
         "    !pip -q install prodigyopt==1.0 flax==0.8.4 jax==0.4.23 jaxlib==0.4.23 opencv-python-headless==4.9.0.80\n",
         "    !pip install onnxruntime==1.17.3\n",
         "    # ============================\n",
+        "    clear_output()\n",
         "\n",
         "    from accelerate.utils import write_basic_config\n",
         "\n",
@@ -160,7 +157,7 @@
         "    prepare_environment()\n",
         "\n",
         "main()\n",
-        "(print(f\"done ✅\"))"
+        "(print(f\"DONE ✅\"))"
       ]
     },
     {
@@ -301,6 +298,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from IPython.display import clear_output\n",
         "#@markdown ### **4. Tag your images**\n",
         "#@markdown ##### **Waifu Diffusion 1.4 Tagger V3**\n",
         "%store -r\n",
@@ -318,6 +316,13 @@
         "extension = \".txt\" # @param [\".txt\", \".caption\"]\n",
         "recursive = False # @param {type:\"boolean\"}\n",
         "overwrite_existing_caption = False # @param {type:\"boolean\"}\n",
+        "\n",
+        "#missing dependencies\n",
+        "!pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
+        "!pip install fairscale==0.4.13 timm==0.6.12 -q\n",
+        "!pip install onnxruntime-gpu==1.17.1 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/ -q\n",
+        "clear_output()\n",
+        "print(\"\\033[96mtagging images please wait...\\033[0m\")\n",
         "\n",
         "config = {\n",
         "    \"dir\"         : train_data_dir,\n",
@@ -352,7 +357,7 @@
         "\n",
         "os.chdir(tag_dir)\n",
         "!{final_args}\n",
-        "print(\"done ✅\")"
+        "print(\"\\033[96mDONE ✅\\033[0m\")"
       ],
       "metadata": {
         "cellView": "form",
