--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,10 @@
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
         "auto_off   = True  # @param {type: \"boolean\"}\n",
-        "print(\"\\033[96mAuto Off encendido, el entorno se desconectara al finalizar el entrenamiento\\033[0m\")\n",
+        "if auto_off:\n",
+        "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara al finalizar el entrenamiento\\033[0m\")\n",
+        "if not auto_off:\n",
+        "    print(\"Auto Off apagado\")\n",
         "\n",
         "# These carry information from past executions\n",
         "if \"model_url\" in globals():\n",
