--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -71,9 +71,9 @@
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
         "auto_off   = True  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
-        "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara al finalizar el entrenamiento\\033[0m\")\n",
+        "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
-        "    print(\"Auto Off apagado\")\n",
+        "    print(\"\\033[Auto Off apagado\\033[0m\")\n",
         "\n",
         "# These carry information from past executions\n",
         "if \"model_url\" in globals():\n",
@@ -687,14 +687,13 @@
         "    display(Markdown(\"### ✅ Done! [Go download your Lora from Google Drive](https://drive.google.com/drive/my-drive)\\n\"\n",
         "                       \"### There will be several files, you should try the latest version (the file with the largest number next to it)\"))\n",
         "#auto off\n",
-        "  if not auto_off:\n",
-        "      print(\"\\033[96Auto off está desactivado, el entorno no se desconectará\\033[0m\")\n",
-        "  else:\n",
-        "    print(\"\\033[96mAuto Off está activado, el entorno se desconectará en 30 segundos\\033[0m\")\n",
-        "  from google.colab import runtime\n",
-        "  time.sleep(30)\n",
-        "  runtime.unassign()\n",
-        "\n",
+        "if auto_off:\n",
+        "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara al finalizar el entrenamiento\\033[0m\")\n",
+        "    from google.colab import runtime\n",
+        "    time.sleep(30)\n",
+        "    runtime.unassign()\n",
+        "else:\n",
+        "    print(\"\\033[96mAuto off está desactivado, el entorno no se desconectará\\033[0m\")\n",
         "main()\n",
         "\n",
         "\n"
