updated ram patch

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -73,7 +73,7 @@
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
-        "    print(\"\\033[Auto Off apagado\\033[0m\")\n",
+        "    print(\"\\033[96mAuto Off apagado\\033[0m\")\n",
         "\n",
         "# These carry information from past executions\n",
         "if \"model_url\" in globals():\n",
@@ -323,6 +323,8 @@
         "  !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/train_network_xl_wrapper.py -q -O train_network_xl_wrapper.py\n",
         "  !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/dracula.py -q -O dracula.py\n",
         "\n",
+        "  !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
         "  !pip install torch==2.5.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 -q \\\n",
@@ -350,9 +352,11 @@
         "  if not os.path.exists(accelerate_config_file):\n",
         "    write_basic_config(save_location=accelerate_config_file)\n",
         "\n",
+        "  os.environ[\"LD_PRELOAD\"] = \"/content/libtcmalloc_minimal.so.4\"\n",
         "  os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
         "  os.environ[\"BITSANDBYTES_NOWELCOME\"] = \"1\"\n",
         "  os.environ[\"SAFETENSORS_FAST_GPU\"] = \"1\"\n",
+        "  os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
         "\n",
         "def validate_dataset():\n",
         "  global lr_warmup_steps, lr_warmup_ratio, caption_extension, keep_tokens, model_url\n",
@@ -691,7 +695,7 @@
         "\n",
         "#auto off\n",
         "if auto_off:\n",
-        "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara al finalizar el entrenamiento\\033[0m\")\n",
+        "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara en 30 segundos\\033[0m\")\n",
         "    from google.colab import runtime\n",
         "    time.sleep(30)\n",
         "    runtime.unassign()\n",
