updated tag counter

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -469,8 +469,10 @@
         "from collections import Counter\n",
         "import os\n",
         "\n",
+        "%store -r\n",
+        "\n",
         "# Define the project path\n",
-        "proyect_dir = \"/content/drive/MyDrive/Loras/My_proyect/dataset\"  #@param {type:\"string\"}\n",
+        "proyect_dir = train_data_dir  #param {type:\"string\"}\n",
         "\n",
         "# Defines the path of the dataset\n",
         "dataset_folder = f\"{proyect_dir}/\"\n",
@@ -491,11 +493,11 @@
         "top_tags = Counter(top_tags)\n",
         "print(f\"Top {show_top_tags} tags:\")\n",
         "for k, v in top_tags.most_common(show_top_tags):\n",
-        "  print(f\"{k} ({v})\")"
+        "  print(f\"{k} ({v})\")\n"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "_Lkn63_l65uR"
+        "id": "bv57uPRjCAD6"
       },
       "execution_count": null,
       "outputs": []
