Fix Anime tagger Fix photo caption

--- a/Dataset_Maker By WhiteZ.ipynb
+++ b/Dataset_Maker By WhiteZ.ipynb
@@ -38,11 +38,10 @@
         "id": "-rdgF2AWLS2h"
       },
       "source": [
-        "| |GitHub|TrainerXL|Dataset Maker|\n",
-        "|:--|:-:|:-:|:-:|\n",
+        "| |GitHub|TrainerXL|Dataset Maker WDV2|Dataset Maker WDV3| |\n",
+        "|:--|:-:|:-:|:-:||:-:|\n",
         "| 🏠 **Original Proyect** |[![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | |\n",
-        "|**Modified By WhiteZ**| [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) |   [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) |[![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker%20By%20WhiteZ.ipynb)\n",
-        "\n"
+        "|**Modified By WhiteZ**| [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) |   [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) |[![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker%20By%20WhiteZ.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataser_Maker.ipynb)\n"
       ]
     },
     {
@@ -144,8 +143,10 @@
         "  if \"step4a_installed_flag\" not in globals() or \"step4b_installed_flag\" in globals():\n",
         "    print(\"\\n🏭 Installing dependencies...\\n\")\n",
         "    !pip install accelerate==0.25.0 diffusers[torch]==0.25.0 einops==0.6.0 tensorflow==2.15.0 \\\n",
-        "      keras==2.15.0 transformers safetensors huggingface-hub==0.22.0 torchvision albumentations==1.4.18 \\\n",
-        "      jax==0.4.23 jaxlib==0.4.23 onnx==1.15.0 onnxruntime-gpu==1.17.1\n",
+        "      keras==2.15.0 transformers safetensors huggingface-hub==0.22.0 torchvision albumentations \\\n",
+        "      jax==0.4.23 jaxlib==0.4.23\n",
+        "    !pip install --upgrade jax jaxlib\n",
+        "\n",
         "    if not get_ipython().__dict__['user_ns']['_exit_code']:\n",
         "      clear_output()\n",
         "      step4a_installed_flag = True\n",
@@ -188,9 +189,12 @@
         "else: # Photos\n",
         "  if \"step4b_installed_flag\" not in globals() or \"step4a_installed_flag\" in globals():\n",
         "    print(\"\\n🏭 Installing dependencies...\\n\")\n",
-        "    !pip install timm==0.6.12 fairscale==0.4.13 transformers==4.26.0 requests \\\n",
+        "    !pip install timm==1.0.14 fairscale==0.4.13 transformers==4.26.0 requests \\\n",
         "      accelerate==0.25.0 diffusers[torch]==0.25.0 einops==0.6.0 safetensors \\\n",
-        "      jax==0.4.23 jaxlib==0.4.23\n",
+        "      jax==0.4.23 jaxlib==0.4.23 huggingface-hub==0.22.0\n",
+        "    !pip install --upgrade jax jaxlib\n",
+        "\n",
+        "\n",
         "    if not get_ipython().__dict__['user_ns']['_exit_code']:\n",
         "      clear_output()\n",
         "      step4b_installed_flag = True\n",
