--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -327,7 +327,7 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
-        "  !pip install torch==2.6.0+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 -q \\\n",
+        "  !pip install accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 -q \\\n",
         "    bitsandbytes==0.40.0.post4 flax==0.7.5 opencv-python jax==0.4.23 jaxlib==0.4.23 -q \\\n",
         "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q \\\n",
         "    safetensors pygments huggingface-hub==0.22.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q \\\n",
