--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -41,12 +41,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "P62A6n3M1Bqe"
+        "id": "P62A6n3M1Bqe",
+        "outputId": "90a1e0eb-3b5d-475c-a14b-9ff082cd6ead",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DONE ✅\n"
+          ]
+        }
+      ],
       "source": [
         "# @title ## **1. Install dependencies** ✅\n",
         "import os\n",
@@ -170,7 +182,7 @@
         "\n",
         "%store -r\n",
         "\n",
-        "train_data_dir = \"/content/drive/MyDrive/Loras/My_proyect/dataset\"  # @param {'type' : 'string'}\n",
+        "train_data_dir = \"/content/drive/MyDrive/Loras/malika/dataset/capelet\"  # @param {'type' : 'string'}\n",
         "%store train_data_dir\n",
         "\n",
         "os.makedirs(train_data_dir, exist_ok=True)\n",
@@ -178,19 +190,58 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "eRm_4O6J1xLN"
+        "id": "eRm_4O6J1xLN",
+        "outputId": "d02be7c9-0c45-48ae-f3c0-9ac2f254d92b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Stored 'train_data_dir' (str)\n",
+            "Your train data directory : /content/drive/MyDrive/Loras/malika/dataset/capelet\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
-        "id": "Jz2emq6vWnPu"
+        "id": "Jz2emq6vWnPu",
+        "outputId": "edb7b8d1-95dd-4b66-9cf3-87c126728bc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1/1 [00:00<00:00, 9258.95it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[96mAll images have been converted\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# @title ## **3. Data Cleaning 🔨**\n",
         "# @markdown #### Delete Unnecessary Files\n",
@@ -310,15 +361,15 @@
         "\n",
         "MODEL = \"wd-v1-4-swinv2-tagger.v3\" # @param [\"wd-v1-4-vit-tagger.v3\",\"wd-v1-4-convnext-tagger.v3\",\"wd-v1-4-swinv2-tagger.v3\",\"wd-vit-large-tagger-v3\",\"wd-eva02-large-tagger-v3\"]\n",
         "#@markdown Recomended treshold is between `0.4` - `0.5`. More theshold lesser tags.\n",
-        "threshold = 0.4 #@param {type:\"number\", min:0, max:1, step:0.05}\n",
+        "threshold = 0.3 #@param {type:\"number\", min:0, max:1, step:0.05}\n",
         "#@markdown `undesire_tag` remove caption that you don't want it from the image(s). eg: `black shirt, vtuber` separated by comma.\n",
         "undesire_caption = \"bangs, breasts, multicolored hair, two-tone hair, gradient hair, virtual youtuber, parody, style parody, official alternate costume, official alternate hairstyle, official alternate hair length, alternate costume, alternate hairstyle, alternate hair length, alternate hair color, watermark, text, bubble text, signature, artist name\" # @param {type:\"string\"}\n",
         "extension = \".txt\" # @param [\".txt\", \".caption\"]\n",
         "recursive = False # @param {type:\"boolean\"}\n",
-        "overwrite_existing_caption = False # @param {type:\"boolean\"}\n",
+        "overwrite_existing_caption = True # @param {type:\"boolean\"}\n",
         "\n",
         "#missing dependencies\n",
-        "!pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
+        "!pip install torch==2.6.0 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
         "!pip install fairscale==0.4.13 timm==0.6.12 -q\n",
         "!pip install onnxruntime-gpu==1.17.1 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/ -q\n",
         "clear_output()\n",
@@ -360,7 +411,6 @@
         "print(\"\\033[96mDONE ✅\\033[0m\")"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "mNFLYbvT1Kfk"
       },
       "execution_count": null,
