--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -41,24 +41,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "P62A6n3M1Bqe",
-        "outputId": "90a1e0eb-3b5d-475c-a14b-9ff082cd6ead",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "P62A6n3M1Bqe"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "DONE ✅\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @title ## **1. Install dependencies** ✅\n",
         "import os\n",
@@ -182,7 +170,7 @@
         "\n",
         "%store -r\n",
         "\n",
-        "train_data_dir = \"/content/drive/MyDrive/Loras/malika/dataset/capelet\"  # @param {'type' : 'string'}\n",
+        "train_data_dir = \"\"  # @param {'type' : 'string'}\n",
         "%store train_data_dir\n",
         "\n",
         "os.makedirs(train_data_dir, exist_ok=True)\n",
@@ -190,58 +178,19 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "eRm_4O6J1xLN",
-        "outputId": "d02be7c9-0c45-48ae-f3c0-9ac2f254d92b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "eRm_4O6J1xLN"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Stored 'train_data_dir' (str)\n",
-            "Your train data directory : /content/drive/MyDrive/Loras/malika/dataset/capelet\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "Jz2emq6vWnPu",
-        "outputId": "edb7b8d1-95dd-4b66-9cf3-87c126728bc8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Jz2emq6vWnPu"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1/1 [00:00<00:00, 9258.95it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[96mAll images have been converted\u001b[0m\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @title ## **3. Data Cleaning 🔨**\n",
         "# @markdown #### Delete Unnecessary Files\n",
@@ -411,6 +360,7 @@
         "print(\"\\033[96mDONE ✅\\033[0m\")"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "mNFLYbvT1Kfk"
       },
       "execution_count": null,
