Add continue option

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -720,15 +720,34 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "23_YDYGhEnK0"
+        "id": "sjT4dbAe1TEW"
       },
       "outputs": [],
       "source": [
-        "#@markdown Conectarse a Google Drive 📁. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
+        "#@markdown **Conectarse a Google Drive 📁** <p> Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
         "#@markdown conectate aquí.\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "print(\"Conexión establecida a Drive Exitosa!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "-cnM6xM_E6Jx"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ### ↪️ Continuar\n",
+        "\n",
+        "#@markdown Aquí puede colocar una ruta de tu Drive para cargar un archivo Lora existente y así continuar entrenando. <P>\n",
+        "#@markdown **Advertencia:** No es lo mismo que una larga sesión de entrenamiento. Los epochs comienzan desde cero, y puede tener peores resultados.\n",
+        "continue_from_lora = \"\" #@param {type:\"string\"}\n",
+        "if continue_from_lora and not continue_from_lora.startswith(\"/content/drive/MyDrive\"):\n",
+        "  import os\n",
+        "  continue_from_lora = os.path.join(\"/content/drive/MyDrive\", continue_from_lora)\n"
       ]
     },
     {
