fix torch does not use gpu

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -315,12 +315,12 @@
         "undesire_caption = \"bangs, breasts, multicolored hair, two-tone hair, gradient hair, virtual youtuber, parody, style parody, official alternate costume, official alternate hairstyle, official alternate hair length, alternate costume, alternate hairstyle, alternate hair length, alternate hair color, watermark, text, bubble text, signature, artist name\" # @param {type:\"string\"}\n",
         "extension = \".txt\" # @param [\".txt\", \".caption\"]\n",
         "recursive = False # @param {type:\"boolean\"}\n",
-        "overwrite_existing_caption = True # @param {type:\"boolean\"}\n",
+        "overwrite_existing_caption = False # @param {type:\"boolean\"}\n",
         "\n",
         "#missing dependencies\n",
-        "!pip install torch==2.6.0 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
+        "!pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
         "!pip install fairscale==0.4.13 timm==0.6.12 -q\n",
-        "!pip install onnxruntime-gpu==1.17.1 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/ -q\n",
+        "!pip install onnxruntime-gpu==1.18.1 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/ -q\n",
         "clear_output()\n",
         "print(\"\\033[96mtagging images please wait...\\033[0m\")\n",
         "\n",
