--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -105,6 +105,7 @@
         "LOAD_TRUNCATED_IMAGES = True\n",
         "BETTER_EPOCH_NAMES = True\n",
         "FIX_DIFFUSERS = True\n",
+        "FIX_WANDB_WARNING = True\n",
         "\n",
         "#@title ## 🚩 Start Here\n",
         "\n",
@@ -227,10 +228,13 @@
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
         "lr_warmup_steps = 0 #@param {type:\"number\"}\n",
-        "#@markdown Ajusta la pérdida a lo largo del tiempo y hace que el aprendizaje sea mucho más eficiente. El documento recomienda 5.0, yo recomiendo 8.0 para anime. Un valor más alto lo hace menos estricto. Establezca en 0 para desactivar.\n",
-        "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4.0, max:16.0, step:0.5}\n",
-        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros). Pero puede dañar la generación de ojos, usalo solo si es necesario, no es necesario activarlo si usas un modelo vpred.\n",
-        "multinoise = False #@param {type:\"boolean\"}\n",
+        "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
+        "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
+        "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
+        "ip_noise_gamma_enabled = False #@param {type:\"boolean\"}\n",
+        "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
+        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros).\n",
+        "multinoise = True #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
@@ -248,8 +252,8 @@
         "network_dim = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "network_alpha = 4 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon.\n",
-        "conv_dim = 4 #@param {type:\"number\", min:1, max:32, step:1}\n",
-        "conv_alpha = 1 #@param {type:\"number\", min:1, max:32, step:1}\n",
+        "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
+        "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "\n",
         "network_module = \"networks.lora\"\n",
         "network_args = None\n",
@@ -265,8 +269,8 @@
         "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "#@markdown xformers funciona mejor que sdpa con los nuevos scrips.\n",
         "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
-        "#@markdown Si estás en un A100 debes habilitar bf16 (solo colab pro).\n",
-        "mixed_precision = \"fp16\" #@param [\"bf16\", \"fp16\"]\n",
+        "#@markdown La GPU A100 puede ejecutar BF16 correctamente. Es una forma diferente de mantener la precisión de los valores internos (solo colab pro).\n",
+        "mixed_precision = \"fp16\" #@param [\"fp16\", \"bf16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
         "cache_latents_to_drive = False #@param {type:\"boolean\"}\n",
@@ -280,17 +284,27 @@
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04` <p>\n",
-        "optimizer_args = \"scale_parameter=False relative_step=False warmup_init=False\" #@param {type:\"string\"}\n",
-        "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
         "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
+        "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
+        "optimizer_args = \"\" #@param {type:\"string\"}\n",
+        "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "\n",
-        "if any(opt in optimizer.lower() for opt in [\"dadapt\", \"prodigy\"]):\n",
-        "  if recommended_values:\n",
+        "\n",
+        "if recommended_values:\n",
+        "  if any(opt in optimizer.lower() for opt in [\"dadapt\", \"prodigy\"]):\n",
         "    unet_lr = 0.75\n",
         "    text_encoder_lr = 0.75\n",
         "    network_alpha = network_dim\n",
+        "  if optimizer == \"Prodigy\":\n",
+        "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.999]\", \"d_coef=2\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
+        "  elif optimizer == \"AdamW8bit\":\n",
+        "    optimizer_args = [\"weight_decay=0.1\", \"betas=[0.9,0.99]\"]\n",
+        "  elif optimizer == \"AdaFactor\":\n",
+        "    optimizer_args = [\"scale_parameter=False\", \"relative_step=False\", \"warmup_init=False\"]\n",
+        "  elif optimizer == \"Came\":\n",
+        "    optimizer_args = [\"weight_decay=0.04\"]\n",
         "\n",
         "if optimizer == \"Came\":\n",
         "  optimizer = \"LoraEasyCustomOptimizer.came.CAME\"\n",
@@ -303,8 +317,10 @@
         "if \"rex\" in lr_scheduler:\n",
         "  lr_scheduler = \"cosine\"\n",
         "  lr_scheduler_type = \"LoraEasyCustomOptimizer.RexAnnealingWarmRestarts.RexAnnealingWarmRestarts\"\n",
-        "  lr_scheduler_args = [\"min_lr=1e-7\", \"gamma=0.9\", \"d=0.9\"]\n",
+        "  lr_scheduler_args = [\"min_lr=1e-9\", \"gamma=0.9\", \"d=0.9\"]\n",
         "\n",
+        "# Misc\n",
+        "seed = 42\n",
         "gradient_accumulation_steps = 1\n",
         "bucket_reso_steps = 64\n",
         "min_bucket_reso = 256\n",
@@ -364,6 +380,9 @@
         "  if FIX_DIFFUSERS:\n",
         "    deprecation_utils = os.path.join(kohya_dir, \"venv/lib/python3.10/site-packages/diffusers/utils/deprecation_utils.py\")\n",
         "    !sed -i 's/if version.parse/if False:#/g' {deprecation_utils}\n",
+        "  if FIX_WANDB_WARNING:\n",
+        "    !sed -i 's/accelerator.log(logs, step=epoch + 1)//g' train_network.py\n",
+        "    !sed -i 's/accelerator.log(logs, step=epoch + 1)//g' sdxl_train.py\n",
         "\n",
         "  os.chdir(root_dir)\n",
         "\n",
@@ -472,7 +491,7 @@
         "        \"network_module\": network_module,\n",
         "        \"network_args\": network_args,\n",
         "        \"network_train_unet_only\": text_encoder_lr == 0 or cache_text_encoder_outputs,\n",
-        "        \"network_weights\": continue_from_lora if continue_from_lora else None\n",
+        "        \"network_weights\": continue_from_lora or None\n",
         "      },\n",
         "      \"optimizer_arguments\": {\n",
         "        \"learning_rate\": unet_lr,\n",
@@ -483,7 +502,7 @@
         "        \"lr_scheduler_power\": lr_scheduler_power if lr_scheduler == \"polynomial\" else None,\n",
         "        \"lr_warmup_steps\": lr_warmup_steps if lr_scheduler not in (\"cosine\", \"constant\") else None,\n",
         "        \"optimizer_type\": optimizer,\n",
-        "        \"optimizer_args\": optimizer_args if optimizer_args else None,\n",
+        "       \"optimizer_args\": optimizer_args or None,\n",
         "        \"loss_type\": \"l2\",\n",
         "        \"max_grad_norm\": 1.0,\n",
         "      },\n",
@@ -494,15 +513,16 @@
         "        \"max_train_steps\": max_train_steps,\n",
         "        \"max_train_epochs\": max_train_epochs,\n",
         "        \"train_batch_size\": train_batch_size,\n",
-        "        \"seed\": 42,\n",
+        "        \"seed\": seed,\n",
         "        \"max_token_length\": 225,\n",
         "        \"xformers\": cross_attention == \"xformers\",\n",
         "        \"sdpa\": cross_attention == \"sdpa\",\n",
-        "        \"min_snr_gamma\": min_snr_gamma if min_snr_gamma > 0 else None,\n",
+        "        \"min_snr_gamma\": min_snr_gamma if min_snr_gamma_enabled else None,\n",
+        "        \"ip_noise_gamma\": ip_noise_gamma if ip_noise_gamma_enabled else None,\n",
         "        \"no_half_vae\": True,\n",
         "        \"gradient_checkpointing\": True,\n",
         "        \"gradient_accumulation_steps\": gradient_accumulation_steps,\n",
-        "        \"max_data_loader_n_workers\": 8,\n",
+        "        \"max_data_loader_n_workers\": 1,\n",
         "        \"persistent_data_loader_workers\": True,\n",
         "        \"mixed_precision\": mixed_precision,\n",
         "        \"full_bf16\": mixed_precision == \"bf16\",\n",
@@ -515,9 +535,9 @@
         "        \"prior_loss_weight\": 1.0,\n",
         "        \"multires_noise_iterations\": 6 if multinoise else None,\n",
         "        \"multires_noise_discount\": 0.3 if multinoise else None,\n",
-        "        \"v_parameterization\": vpred,\n",
-        "        \"scale_v_pred_loss_like_noise_pred\": vpred,\n",
-        "        \"zero_terminal_snr\": vpred,\n",
+        "        \"v_parameterization\": vpred or None,\n",
+        "        \"scale_v_pred_loss_like_noise_pred\": vpred or None,\n",
+        "        \"zero_terminal_snr\": vpred or None,\n",
         "      },\n",
         "      \"saving_arguments\": {\n",
         "        \"save_precision\": \"fp16\",\n",
@@ -528,7 +548,7 @@
         "        \"output_dir\": output_folder,\n",
         "        \"log_prefix\": project_name,\n",
         "        \"logging_dir\": log_folder,\n",
-        "        \"wandb_api_key\": wandb_key if wandb_key else None,\n",
+        "        \"wandb_api_key\": wandb_key or None,\n",
         "        \"log_with\": \"wandb\" if wandb_key else None,\n",
         "      }\n",
         "    }\n",
@@ -824,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Y037lagnJWmn"
       },
@@ -832,6 +852,10 @@
       "source": [
         "custom_dataset = \"\"\"\n",
         "[[datasets]]\n",
+        "\n",
+        "[[datasets.subsets]]\n",
+        "image_dir = \"/content/drive/MyDrive/Loras/malika/dataset/default\"\n",
+        "num_repeats = 1\n",
         "\n",
         "[[datasets.subsets]]\n",
         "image_dir = \"/content/drive/MyDrive/Loras/example/dataset/good_images\"\n",
