--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -125,8 +125,8 @@
         "#@markdown Utilice wandb si desea visualizar el progreso de su entrenamiento a lo largo del tiempo.\n",
         "wandb_key = \"\" #@param {type:\"string\"}\n",
         "\n",
-        "load_diffusers = custom_model_is_diffusers and optional_custom_training_model\n",
-        "vpred = custom_model_is_vpred and optional_custom_training_model\n",
+        "load_diffusers = custom_model_is_diffusers and len(optional_custom_training_model) > 0\n",
+        "vpred = custom_model_is_vpred and len(optional_custom_training_model) > 0\n",
         "\n",
         "if optional_custom_training_model:\n",
         "  model_url = optional_custom_training_model\n",
@@ -168,7 +168,8 @@
         "  else:\n",
         "    model_url = \"https://huggingface.co/LyliaEngine/ponyRealism_v21MainVAE/resolve/main/ponyRealism_v21MainVAE.safetensors\"\n",
         "  model_file = \"/content/ponyrealism.safetensors\"\n",
-        "\n",
+        "elif \"NoobAI V-Pred\" in training_model:\n",
+        "  vpred = True\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75\"\n",
         "  else:\n",
@@ -844,7 +845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Y037lagnJWmn"
       },
