--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -234,7 +234,7 @@
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
         "ip_noise_gamma_enabled = False #@param {type:\"boolean\"}\n",
         "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
-        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros).\n",
+        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros) no es necesario activarlo si entrenas Lora Vpred.\n",
         "multinoise = True #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
