Add continue training cell

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -168,7 +168,6 @@
         "  else:\n",
         "    model_url = \"https://huggingface.co/LyliaEngine/ponyRealism_v21MainVAE/resolve/main/ponyRealism_v21MainVAE.safetensors\"\n",
         "  model_file = \"/content/ponyrealism.safetensors\"\n",
-        
         "  vpred = True\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75\"\n",
@@ -817,6 +816,25 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
+        "id": "-cnM6xM_E6Jx"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ### ↪️ Continuar\n",
+        "\n",
+        "#@markdown Aquí puede escribir una ruta en su Google Drive para cargar un archivo Lora existente y continuar entrenando. <P>\n",
+        "#@markdown **Advertencia:** No es lo mismo que una larga sesión de entrenamiento. Los epochs comienzan desde cero, y puede obtener peores resultados.\n",
+        "continue_from_lora = \"\" #@param {type:\"string\"}\n",
+        "if continue_from_lora and not continue_from_lora.startswith(\"/content/drive/MyDrive\"):\n",
+        "  import os\n",
+        "  continue_from_lora = os.path.join(\"/content/drive/MyDrive\", continue_from_lora)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
         "id": "23_YDYGhEnK0"
       },
       "outputs": [],
@@ -853,10 +871,6 @@
       "source": [
         "custom_dataset = \"\"\"\n",
         "[[datasets]]\n",
-        "\n",
-        "[[datasets.subsets]]\n",
-        "image_dir = \"/content/drive/MyDrive/Loras/malika/dataset/default\"\n",
-        "num_repeats = 1\n",
         "\n",
         "[[datasets.subsets]]\n",
         "image_dir = \"/content/drive/MyDrive/Loras/example/dataset/good_images\"\n",
