add float and mixed pf16 options

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = True  # @param {type: \"boolean\"}\n",
+        "auto_off   = False  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -250,7 +250,7 @@
         "\n",
         "#@markdown Más dim significa un Lora más grande, puede contener más información, pero más no siempre es mejor.\n",
         "network_dim = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
-        "network_alpha = 4 #@param {type:\"number\", min:1, max:32, step:1}\n",
+        "network_alpha = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon.\n",
         "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
@@ -269,13 +269,22 @@
         "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "#@markdown xformers funciona mejor que sdpa con los nuevos scrips.\n",
         "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
-        "#@markdown La GPU A100 puede ejecutar BF16 correctamente. Es una forma diferente de mantener la precisión de los valores internos (solo colab pro).\n",
-        "mixed_precision = \"fp16\" #@param [\"fp16\", \"bf16\"]\n",
+        "#@markdown Utilice `full fp16` para el uso mínimo de memoria. Es posible que las opciones `bf16` no funcionen correctamente en el nivel de GPU gratuito.<p>\n",
+        "#@markdown Las opciones `float y mixed fp16` solo funcionaran con un modelo en formato **diffusers** <p>\n",
+        "#@markdown El Lora se entrenará con la precisión seleccionada, pero siempre se guardará en formato fp16 por razones de compatibilidad.\n",
+        "precision = \"full fp16\" #@param [\"float\", \"full fp16\", \"full bf16\", \"mixed fp16\", \"mixed bf16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
         "cache_latents_to_drive = False #@param {type:\"boolean\"}\n",
         "#@markdown La siguiente opción desactivará shuffle_tags y deshabilitará el entrenamiento del codificador de texto.\n",
         "cache_text_encoder_outputs  = False  # @param {type:\"boolean\"}\n",
+        "\n",
+        "mixed_precision = \"no\"\n",
+        "if \"fp16\" in precision:\n",
+        "  mixed_precision = \"fp16\"\n",
+        "elif \"bf16\" in precision:\n",
+        "  mixed_precision = \"bf16\"\n",
+        "full_precision = \"full\" in precision\n",
         "\n",
         "#@markdown ### ▶️ Advanced\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. Adafactor es el predeterminado y funciona muy bien, mientras que el Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido, debido a que necesita menos pasos y funcionan mejor para datasets pequeños.\n",
@@ -285,7 +294,7 @@
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04` <p>\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
-        "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
+        "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`, `full_precision=False`<p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
         "optimizer_args = \"\" #@param {type:\"string\"}\n",
@@ -297,6 +306,7 @@
         "    unet_lr = 0.75\n",
         "    text_encoder_lr = 0.75\n",
         "    network_alpha = network_dim\n",
+        "    full_precision = False\n",
         "  if optimizer == \"Prodigy\":\n",
         "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.999]\", \"d_coef=2\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
         "  elif optimizer == \"AdamW8bit\":\n",
@@ -525,8 +535,8 @@
         "        \"max_data_loader_n_workers\": 1,\n",
         "        \"persistent_data_loader_workers\": True,\n",
         "        \"mixed_precision\": mixed_precision,\n",
-        "        \"full_bf16\": mixed_precision == \"bf16\",\n",
-        "        \"full_fp16\": mixed_precision == \"fp16\",\n",
+        "        \"full_fp16\": mixed_precision == \"fp16\" and full_precision,\n",
+        "        \"full_bf16\": mixed_precision == \"bf16\" and full_precision,\n",
         "        \"cache_latents\": cache_latents,\n",
         "        \"cache_latents_to_disk\": cache_latents_to_drive,\n",
         "        \"cache_text_encoder_outputs\": cache_text_encoder_outputs,\n",
