--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = False  # @param {type: \"boolean\"}\n",
+        "auto_off   = True  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -224,10 +224,10 @@
         "text_encoder_lr = 6e-5 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
         "lr_scheduler = \"constant_with_warmup\" #@param [\"constant\", \"cosine\", \"cosine_with_restarts\", \"constant_with_warmup\", \"linear\", \"polynomial\"]\n",
-        "lr_scheduler_number = 0 #@param {type:\"number\"}\n",
+        "lr_scheduler_number = 3 #@param {type:\"number\"}\n",
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
-        "lr_warmup_steps = 100 #@param {type:\"number\"}\n",
+        "lr_warmup_steps = 0 #@param {type:\"number\"}\n",
         "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
         "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
@@ -373,9 +373,11 @@
         "  !apt -y update -qq\n",
         "  !apt install -y python3.10-venv aria2 -qq\n",
         "  !git clone https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
-        "  !chmod 755 /content/trainer/colab_install.sh\n",
+        "  !chmod 755 /content/trainer/colab_install.sh > /dev/null 2> errores.log\n",
+        "\n",
         "  os.chdir(trainer_dir)\n",
-        "  !./colab_install.sh\n",
+        "  !./colab_install.sh > /dev/null 2> errores.log\n",
+        "  print('\\033[91mInstalando dependencias, esto puede tardar hasta ¡¡6 minutos!!\\033[0m')\n",
         "\n",
         "  # fix logging\n",
         "  !{venv_pip} uninstall -y rich\n",
@@ -873,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "Y037lagnJWmn"
       },
