--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -224,10 +224,10 @@
         "text_encoder_lr = 6e-5 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
         "lr_scheduler = \"constant_with_warmup\" #@param [\"constant\", \"cosine\", \"cosine_with_restarts\", \"constant_with_warmup\", \"linear\", \"polynomial\"]\n",
-        "lr_scheduler_number = 3 #@param {type:\"number\"}\n",
+        "lr_scheduler_number = 0 #@param {type:\"number\"}\n",
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
-        "lr_warmup_steps = 0 #@param {type:\"number\"}\n",
+        "lr_warmup_steps = 100 #@param {type:\"number\"}\n",
         "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
         "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
@@ -270,7 +270,7 @@
         "#@markdown xformers funciona mejor que sdpa con los nuevos scrips.\n",
         "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
         "#@markdown Utilice `full fp16` para el uso mínimo de memoria. Es posible que las opciones `bf16` no funcionen correctamente en el nivel de GPU gratuito.<p>\n",
-        "#@markdown Las opciones `float y mixed fp16` solo funcionaran con un modelo en formato **diffusers** <p>\n",
+        "#@markdown Todas las demás opciones solo funcionarán con Colab Pro. <p>\n",
         "#@markdown El Lora se entrenará con la precisión seleccionada, pero siempre se guardará en formato fp16 por razones de compatibilidad.\n",
         "precision = \"full fp16\" #@param [\"float\", \"full fp16\", \"full bf16\", \"mixed fp16\", \"mixed bf16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
@@ -410,12 +410,12 @@
         "  supported_types = (\".png\", \".jpg\", \".jpeg\", \".webp\", \".bmp\")\n",
         "\n",
         "  if model_url.startswith(\"/content/drive/\") and not os.path.exists(model_url):\n",
-        "    print(\"💥 Error: The custom training model you specified was not found in your Google Drive.\")\n",
+        "    print(\"💥 Error: El modelo de entrenamiento personalizado que especificó no se encontró en su Google Drive.\")\n",
         "    return\n",
         "\n",
         "  print(\"\\n💿 Checking dataset...\")\n",
         "  if not project_name.strip() or any(c in project_name for c in \" .()\\\"'\\\\/\"):\n",
-        "    print(\"💥 Error: Please choose a valid project name.\")\n",
+        "    print(\"💥 Error: Elija un nombre de proyecto válido.\")\n",
         "    return\n",
         "\n",
         "  # Find the folders and files\n",
@@ -424,7 +424,7 @@
         "      datconf = toml.loads(custom_dataset)\n",
         "      datasets = [d for d in datconf[\"datasets\"][0][\"subsets\"]]\n",
         "    except:\n",
-        "      print(f\"💥 Error: Your custom dataset is invalid or contains an error! Please check the original template.\")\n",
+        "      print(f\"💥 Error: El conjunto de datos personalizado no es válido o contiene un error. Por favor, compruebe la plantilla original.\")\n",
         "      return\n",
         "    reg = [d.get(\"image_dir\") for d in datasets if d.get(\"is_reg\", False)]\n",
         "    datasets_dict = {d[\"image_dir\"]: d[\"num_repeats\"] for d in datasets}\n",
@@ -440,7 +440,7 @@
         "  # Validation\n",
         "  for folder in folders:\n",
         "    if not os.path.exists(folder):\n",
-        "      print(f\"💥 Error: The folder {folder.replace('/content/drive/', '')} doesn't exist.\")\n",
+        "      print(f\"💥 Error: La carpeta {folder.replace('/content/drive/', '')} no existe.\")\n",
         "      return\n",
         "  for folder, (img, rep) in images_repeats.items():\n",
         "    if not img:\n",
@@ -449,12 +449,12 @@
         "  test_files = []\n",
         "  for f in files:\n",
         "    if not f.lower().endswith((caption_extension, \".npz\")) and not f.lower().endswith(supported_types):\n",
-        "      print(f\"💥 Error: Invalid file in dataset: \\\"{f}\\\". Aborting.\")\n",
+        "      print(f\"💥 Error: Archivo no válido en el conjunto de datos: \\\"{f}\\\". Abortar.\")\n",
         "      return\n",
         "    for ff in test_files:\n",
         "      if f.endswith(supported_types) and ff.endswith(supported_types) \\\n",
         "          and os.path.splitext(f)[0] == os.path.splitext(ff)[0]:\n",
-        "        print(f\"💥 Error: The files {f} and {ff} cannot have the same name. Aborting.\")\n",
+        "        print(f\"💥 Error: Los archivos {f} y {ff} no puede tener el mismo nombre. Abortar.\")\n",
         "        return\n",
         "    test_files.append(f)\n",
         "\n",
@@ -477,12 +477,12 @@
         "    print(f\"📈 Found {img} images with {rep} repeats, equaling {img*rep} steps.\")\n",
         "  print(f\"📉 Divide {pre_steps_per_epoch} steps by {train_batch_size} batch size to get {steps_per_epoch} steps per epoch.\")\n",
         "  if max_train_epochs:\n",
-        "    print(f\"🔮 There will be {max_train_epochs} epochs, for around {total_steps} total training steps.\")\n",
+        "    print(f\"🔮 Habrá {max_train_epochs} epochs, por alrededor de {total_steps} Total de pasos de entrenamiento.\")\n",
         "  else:\n",
-        "    print(f\"🔮 There will be {total_steps} steps, divided into {estimated_epochs} epochs and then some.\")\n",
+        "    print(f\"🔮 Habrá {total_steps} pasos, divididos en {estimated_epochs} epochs y algo más.\")\n",
         "\n",
         "  if total_steps > 10000:\n",
-        "    print(\"💥 Error: Your total steps are too high. You probably made a mistake. Aborting...\")\n",
+        "    print(\"💥 Error: El total de pasos es demasiado alto. Probablemente cometiste un error. Abortar...\")\n",
         "    return\n",
         "\n",
         "  return True\n",
@@ -650,7 +650,7 @@
         "              existing_folders = set(fs.ls(model_file, detail=False))\n",
         "              necessary_folders = [ \"scheduler\", \"text_encoder\", \"text_encoder_2\", \"tokenizer\", \"tokenizer_2\", \"unet\", \"vae\" ]\n",
         "              if all(f\"{model_file}/{folder}\" in existing_folders for folder in necessary_folders):\n",
-        "                print(\"🍃 Diffusers model identified.\")  # Will be handled by kohya\n",
+        "                print(\"🍃 Modelo diffusers identificado.\")  # Will be handled by kohya\n",
         "                return True\n",
         "      raise ValueError(\"💥 Failed to load Diffusers model. If this model is not Diffusers, have you tried turning it off at the top of the colab?\")\n",
         "\n",
@@ -709,7 +709,7 @@
         "def calculate_rex_steps():\n",
         "  # https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend/blob/c34084b0435e6e19bb7a01ac1ecbadd185ee8c1e/utils/validation.py#L268\n",
         "  global max_train_steps\n",
-        "  print(\"\\n🤔 Calculating Rex steps\")\n",
+        "  print(\"\\n🤔 Calculando los pasos de rex\")\n",
         "  if max_train_steps:\n",
         "    calculated_max_steps = max_train_steps\n",
         "  else:\n",
@@ -751,7 +751,7 @@
         "\n",
         "  if not os.path.exists('/content/drive'):\n",
         "    from google.colab import drive\n",
-        "    print(\"📂 Connecting to Google Drive...\")\n",
+        "    print(\"📂 Conectando a Google Drive...\")\n",
         "    drive.mount('/content/drive')\n",
         "\n",
         "  for dir in (main_dir, trainer_dir, log_folder, images_folder, output_folder, config_folder):\n",
@@ -761,25 +761,25 @@
         "    return\n",
         "\n",
         "  if not dependencies_installed:\n",
-        "    print(\"\\n🏭 Installing trainer...\\n\")\n",
+        "    print(\"\\n🏭 Instalación del entrenador...\\n\")\n",
         "    t0 = time.time()\n",
         "    install_trainer()\n",
         "    t1 = time.time()\n",
         "    dependencies_installed = True\n",
-        "    print(f\"\\n✅ Installation finished in {int(t1-t0)} seconds.\")\n",
+        "    print(f\"\\n✅ Instalación terminada en {int(t1-t0)} segundos.\")\n",
         "  else:\n",
-        "    print(\"\\n✅ Dependencies already installed.\")\n",
+        "    print(\"\\n✅ Dependencias ya instaladas.\")\n",
         "\n",
         "  if old_model_url != model_url or not model_file or not os.path.exists(model_file):\n",
-        "    print(\"\\n🔄 Getting model...\")\n",
+        "    print(\"\\n🔄 Obteniendo modelo...\")\n",
         "    if not download_model():\n",
-        "      print(\"\\n💥 Error: The model you specified is invalid or corrupted.\"\n",
-        "            \"\\nIf you're using an URL, please check that the model is accessible without being logged in.\"\n",
-        "            \"\\nYou can try civitai or huggingface URLs, or a path in your Google Drive starting with /content/drive/MyDrive\")\n",
+        "      print(\"\\n💥 Error: el modelo que especificó no es válido o está corrupto.\"\n",
+        "            \"\\nSi está utilizando una URL, verifique que el modelo sea accesible sin registrarse.\"\n",
+        "            \"\\nPuede probar las URL Civitai o Huggingface, o una ruta en su Google Drive Comenzando con /content/drive/MyDrive\")\n",
         "      return\n",
         "    print()\n",
         "  else:\n",
-        "    print(\"\\n🔄 Model already downloaded.\\n\")\n",
+        "    print(\"\\n🔄 Modelo ya descargado.\\n\")\n",
         "\n",
         "  if lr_scheduler_type:\n",
         "    create_config()\n",
@@ -789,15 +789,15 @@
         "\n",
         "  create_config()\n",
         "\n",
-        "  print(\"\\n⭐ Starting trainer...\\n\")\n",
+        "  print(\"\\n⭐ Iniciando Entrenador..\\n\")\n",
         "\n",
         "  os.chdir(kohya_dir)\n",
         "  !{venv_python} {train_network} --config_file={config_file} --dataset_config={dataset_config_file}\n",
         "  os.chdir(root_dir)\n",
         "\n",
         "  if not get_ipython().__dict__.get('user_ns', {}).get('_exit_code', False):\n",
-        "    display(Markdown(\"### ✅ Done! [Go download your Lora from Google Drive](https://drive.google.com/drive/my-drive)\\n\"\n",
-        "                       \"### There will be several files, you should try the latest version (the file with the largest number next to it)\"))\n",
+        "    display(Markdown(\"### ✅ ¡Hecho! [Ve a descargar tu Lora de Google Drive](https://drive.google.com/drive/my-drive)\\n\"\n",
+        "                       \"### Habrá varios archivos, debe probar la última versión (el archivo con el número más grande junto a él)\"))\n",
         "\n",
         "main()\n",
         "\n",
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Y037lagnJWmn"
       },
